--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_APPLICATION_API_LINK = "http://91.142.74.58/api/v1/"
-VITE_MEDIA_API_LINK = "http://91.142.74.58/media/"
+VITE_APPLICATION_API_LINK = ""
+VITE_MEDIA_API_LINK = "/"
+VITE_API_LINK = ""
