--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
         "@telegram-apps/sdk": "^3.11.4",
         "@telegram-apps/sdk-react": "^3.3.6",
         "@telegram-apps/types": "^2.0.3",
+        "@types/styled-components": "^5.1.34",
         "axios": "^1.10.0",
         "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
         "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-        "react-router": "^7.7.0"
+        "react-markdown": "^10.1.0",
+        "react-player": "^3.3.1",
+        "react-router": "^7.7.0",
+        "react-slick": "^0.31.0",
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^6.1.19"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
+        "@types/react-slick": "^0.23.13",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.1",
         "eslint-plugin-react-hooks": "^5.2.0",
