--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
         "@telegram-apps/sdk-react": "^3.3.6",
         "@telegram-apps/types": "^2.0.3",
         "@types/styled-components": "^5.1.34",
+        "@uiw/react-md-editor": "^4.0.8",
         "axios": "^1.10.0",
+        "mui-file-input": "^7.0.0",
         "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
         "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
         "react-markdown": "^10.1.0",
         "react-player": "^3.3.1",
         "react-router": "^7.7.0",
         "react-slick": "^0.31.0",
+        "remark-gfm": "^4.0.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.19"
     },
