--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "react-player": "^3.3.1",
         "react-router": "^7.7.0",
         "react-slick": "^0.31.0",
+        "rehype-raw": "^7.0.0",
+        "rehype-sanitize": "^6.0.0",
+        "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.19"
